[gd_scene load_steps=5 format=3 uid="uid://dl7f7sjngjih4"]

[ext_resource type="Script" path="res://scripts/level_complete.gd" id="1_hf0pl"]
[ext_resource type="Texture2D" uid="uid://d00aubj2tay7j" path="res://ui_art/white_square.png" id="1_trsd2"]
[ext_resource type="FontFile" uid="uid://cx8c2qvap0bnb" path="res://fonts/century-gothic/GOTHICI.TTF" id="2_kim5t"]
[ext_resource type="PackedScene" uid="uid://hfpaouxmxtmv" path="res://prefabs/next.tscn" id="3_1q6b6"]

[node name="level_complete" type="CanvasLayer"]
script = ExtResource("1_hf0pl")

[node name="BG" type="TextureRect" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.997
offset_right = -3.0
offset_bottom = -0.0560303
texture = ExtResource("1_trsd2")

[node name="Title" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.21
anchor_top = 0.154
anchor_right = 0.759
anchor_bottom = 0.293
offset_left = 0.0799866
offset_top = 0.207993
offset_right = -0.368042
offset_bottom = 0.135986
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_kim5t")
theme_override_font_sizes/font_size = 70
text = "LEVEL COMPLETE"
horizontal_alignment = 1

[node name="MainMenu" parent="." instance=ExtResource("3_1q6b6")]
offset_left = 232.0
offset_right = 432.0
text = "MAIN MENU"

[node name="NextLevel" parent="." instance=ExtResource("3_1q6b6")]
offset_left = 696.0
offset_right = 896.0
text = "NEXT LEVEL"

[node name="LevelSelect" parent="." instance=ExtResource("3_1q6b6")]
offset_left = 464.0
offset_right = 664.0
text = "LEVEL SELECT"

[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_level_select_pressed"]
